# akeboshi_bot

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
src/: main.zig
tree-sitter-akbs/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.akbs  go.mod  grammar.js  package.json  pyproject.toml  setup.py  simple.akbs  tree-sitter.json
tree-sitter-akbs/bindings/c/: tree-sitter-akbs.pc.in
tree-sitter-akbs/bindings/go/: binding.go  binding_test.go
tree-sitter-akbs/bindings/node/: binding.cc
tree-sitter-akbs/bindings/python/tests/: test_binding.py
tree-sitter-akbs/bindings/python/tree_sitter_akbs/: __init__.py  binding.c
tree-sitter-akbs/bindings/rust/: build.rs  lib.rs
tree-sitter-akbs/bindings/swift/TreeSitterAkbs/: akbs.h
tree-sitter-akbs/bindings/swift/TreeSitterAkbsTests/: TreeSitterAkbsTests.swift
tree-sitter-akbs/src/: grammar.json  node-types.json  parser.c
