[package]
name = "tree-sitter-akbs"
description = "Grammar for generating the output of bot commands"
version = "0.1.0"
authors = ["demize <demize@unstable.systems>"]
license = "0BSD"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "akbs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/demize/akeboshi_bot"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
