[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-akbs"
description = "Grammar for generating the output of bot commands"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "akbs"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "demize", email = "demize@unstable.systems" }]
requires-python = ">=3.9"
license.text = "0BSD"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/demize/akeboshi_bot"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
